add delete + readme

--- a/SeriesManager (One Page).html
+++ b/SeriesManager (One Page).html
@@ -608,10 +608,11 @@
                             `                            <td>${series.note}</td>\n` +
                             getLink(series.wikiFR) +
                             getLink(series.wikiEN) +
-                            `                            <td class="edit wikiLink"><div><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8a/OOjs_UI_icon_edit-ltr.svg/1024px-OOjs_UI_icon_edit-ltr.svg.png" alt="edit.png"/></div></td>\n` +
+                            `                            <td class="edit wikiLink"><div><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8a/OOjs_UI_icon_edit-ltr.svg/1024px-OOjs_UI_icon_edit-ltr.svg.png" alt="edit.png"/><img src="https://icon-library.com/images/garbage-bin-icon/garbage-bin-icon-4.jpg" alt="delete.jpg" style="width:20px"/></div></td>\n` +
                             `                        </tr>`);
                         let edit = tbody.getElementsByClassName("edit");
-                        edit[edit.length-1].getElementsByTagName("img")[0].addEventListener("click",event => displayEdit(event))
+                        edit[edit.length-1].getElementsByTagName("img")[0].addEventListener("click",event => displayEdit(event));
+                        edit[edit.length-1].getElementsByTagName("img")[1].addEventListener("click",event => displayDelete(series.name, name));
                     }
                 });
                 document.getElementById("table").insertAdjacentElement('beforeend',tbody);
@@ -658,6 +659,13 @@
             document.getElementById("myModal").style.display = "none";
             tempSeries = null;
             displaySeries(JSON_DATA);
+        }
+
+        function displayDelete(name, category) {
+            if(confirm("Are you sure want to delete it ?\n"+name+" ("+category+")")) {
+                JSON_DATA.categories[category] = JSON_DATA.categories[category].filter(v => v.name !== name);
+                displaySeries(JSON_DATA);
+            }
         }
 
         function loadData() {
