--- a/SeriesManager.html
+++ b/SeriesManager.html
@@ -37,7 +37,7 @@
         </div>
         <div id="addCategoryBar" class="formBar hide">
             <label>Name : <input type="text" id="categoryName"></label>
-            <button id="addCategory" class="saveButton"><img src="img/save.png"/>Save</button>
+            <button id="addCategory" class="saveButton"><img src="img/save.png" alt="save.png"/>Save</button>
         </div>
         <div id="addSeriesBar" class="formBar hide">
             <fieldset>
@@ -61,7 +61,7 @@
                     </section>
                 </div>
                 <section class="toTheLeft">
-                    <button id="addSeries" class="saveButton"><img src="img/save.png"/>Save</button>
+                    <button id="addSeries" class="saveButton"><img src="img/save.png" alt="save.png"/>Save</button>
                 </section>
             </fieldset>
         </div>
@@ -113,8 +113,8 @@
                     </section>
                 </div>
                 <section class="toTheLeft">
-                    <button id="editCancel" class="saveButton"><img src="img/cancel.png" width="12px"/>Cancel</button>
-                    <button id="editSeries" class="saveButton"><img src="img/save.png"/>Save</button>
+                    <button id="editCancel" class="saveButton"><img src="img/cancel.png" alt="cancel.png" width="12px"/>Cancel</button>
+                    <button id="editSeries" class="saveButton"><img src="img/save.png" alt="save.png"/>Save</button>
                 </section>
             </fieldset>
         </div>
